osd/OSDMap: more sanity checks before applying pg_upmap[_items]

Fixes: http://tracker.ceph.com/issues/23878
Signed-off-by: xiexingguo <xie.xingguo@gmail.com>
(cherry picked from commit 776c3d88ada395c1eb562838b9e58b0f0cc07869)